My first Github project

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="team_a_score">0</string>
     <string name="button_try">Try</string>
     <string name="button_conversation">Conversion</string>
-    <string name="button_drop_penalty">Drop/Penalty</string>
+    <string name="button_drop_penalty">Drop/Pen</string>
     <string name="team_b_name">England</string>
     <string name="team_b_score">0</string>
     <string name="text_v">v</string>
